# FlowCast

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  verify_setup.py
.github/workflows/: pylint.yml
kb/: icon_prompts.json  strategy_cache.json  ui_elements.json  wso2_ui_kb.json
output/recordings/news-alert-system-guide/: full-dark.mov  full_script-dark.py  index.md  step-01-create-a-new-integration-project-dark.mov  step-02-add-an-http-service-artifact-dark.mov  step-03-configure-the-graphql-service-logic-dark.mov
output/recordings/quick-start-api-dark/: full.mov  full_script.py  step-01-create-the-project.mov  step-02-add-an-http-service.mov  step-03-design-the-integration-flow.mov
output/recordings/quick-start-api-light/: full_script-dark.py  full_script.py  index.md  step-01-create-the-project-dark.mov  step-01-create-the-project-light.mov  step-01-create-the-project.mov  step-02-add-an-http-service-dark.mov  step-02-add-an-http-service-light.mov  step-02-add-an-http-service.mov  step-03-design-the-integration-flow-dark.mov  step-03-design-the-integration-flow-light.mov  (+5 more)
src/: codegen.py  detector.py  doc_parser.py  healer.py  nl_parser.py  parser.py  recorder.py  runner.py  source_verifier.py  workflow_gen.py
workflows/: hello_world.md  news-alert-system-guide.md  quick-start-api.md  quick-start-automation.md  quick-start-file.md  rabbitmq-event-integration-guide.md  sap-s4hana-wso2-integration-guide.md
workflows/create-hello-world-automation/: create-hello-world-automation.md
workflows/quick-start-api/: quick-start-api.md
(+71 files in other folders)
